--- a/Application/views/test.html
+++ b/Application/views/test.html
@@ -12,8 +12,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
   <script src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
   <script>
+    localStorage.setItem("link_token", '{{ linkToken }}');
   (function($) {
-    var linkToken = '{{ linkToken }}';
+    var linkToken = localStorage.getItem('link_token');
     var handler = Plaid.create({
       token: linkToken,
       receivedRedirectUri: window.location.href,
